12345678901234567890123456789012345678901234567890123456789012345678901234567890
         1         2         3         4         5         6         7         8
----+----|----+----|----+----|----+----|----+----|----+----|----+----|----+----|



ChangeLog (IOMETER2 - 2004.mm.mm):
==================================

- Applied patches:
   - IOTargetDisk_cpp.patch by Lamont Cranston (Closes the files in
     getSizeOfPhysDisk() and getSectorSizeOfPhysDisk() under Linux
     and explain the use of the BLKBSZGET define.
   - disk_full.patch by Lamont Cranston (fixes handling of the disk full
     condition when preparing logical drives).
   - iometer2.Lamont001ConstructorCleanup.patch by Daniel Scheibli
     (bundles the changes contributed by Lamont Cranston - it introduces
     the new IOManagerWin.cpp file).
- Cleanup:
   - Corrected the macro definition for BLKGETSIZE64 in IOCommon.h
- Documentation:
   - Added the initial drop of the DocBook sources of the first part of
     the Iometer Users Guide (converted from OpenOffice - by James Rogers).
- Others:
   - Changed the "Help About..." button of the Iometer Wizard to reflect
     the current status (Open Source,...) of Iometer.
   - Converted the Iometer Wizard to the file format of the 2000 version
     of MS Access and fixed the (Excel) version check of the Graph Wizard
     part (as suggested by Joseph R Gruher).
   - Modified the About dialog to point to the Intel Open Source License
     only.



<BRANCH OUT IOMETER1/>
======================



ChangeLog (IOMETER1 - 2004.nn.nn):
==================================

- Applied patches:
   - iometer-2003.12.16-post.DS2.DanielGlobalAccessSpecs.patch by
     Daniel Scheibli (adds a set of sample Global Access Specifications).
   - iometer-netware.patch by Thayne Harmon (modifies the usage output
     to reflect volume exclusion, adoped Makefile to use Code Warrier 8).
   - iometer-2003.12.16-post.DS2.DanielIcfVersionStringWithDash.patch